--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   </head>
   <body>
 
+  
 
+  <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>   
   <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
